--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -19,9 +19,9 @@
 
     <fragment
         android:id="@+id/navigation_dashboard"
-        android:name="com.kinotech.kinotechappv1.ui.dashboard.DashboardFragment"
+        android:name="com.kinotech.kinotechappv1.ui.lists.ListsFragment"
         android:label="@string/title_dashboard"
-        tools:layout="@layout/fragment_dashboard" />
+        tools:layout="@layout/fragment_lists" />
 
     <fragment
         android:id="@+id/navigation_notifications"
