--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,13 +3,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@+id/navigation_home">
+    app:startDestination="@+id/navigation_feed">
 
     <fragment
-        android:id="@+id/navigation_home"
-        android:name="com.kinotech.kinotechappv1.ui.home.HomeFragment"
-        android:label="@string/title_home"
-        tools:layout="@layout/fragment_home" />
+            android:id="@+id/navigation_feed"
+            android:name="com.kinotech.kinotechappv1.ui.feed.FeedFragment"
+            android:label="@string/title_feed"
+            tools:layout="@layout/fragment_feed" />
 
     <fragment
         android:id="@+id/navigation_search"
