RecyclerAdapterLists, item_list, local list, update build.gradle, class ListOfMovie

--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -12,9 +12,9 @@
         android:title="@string/title_search"/>
 
     <item
-        android:id="@+id/navigation_dashboard"
+        android:id="@+id/navigation_lists"
         android:icon="@drawable/ic_lists_black_24dp"
-        android:title="@string/title_dashboard" />
+        android:title="@string/title_lists" />
 
     <item
         android:id="@+id/navigation_profile"
