--- a/app/src/main/res/layout/fragment_lists.xml
+++ b/app/src/main/res/layout/fragment_lists.xml
@@ -9,7 +9,7 @@
         android:backgroundTint="@color/red_200">
 
     <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recyclerview"
+            android:id="@+id/recyclerview_lists"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
