--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,7 @@
     <color name="red_400">#E56A76</color>
     <color name="red_500">#8B2128</color>
     <color name="red_700">#CD424C</color>
+    <color name="grey">#999999</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
