--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+        android:layout_gravity="center"
     tools:context=".ui.search.SearchFragment"
     android:background="#ED959E">
 
@@ -53,7 +54,6 @@
             android:id="@+id/textView_search"
             android:hint="@string/input_film_name"
             android:fontFamily="@font/rubik_bold"
-            android:textSize="16sp"
             android:textColor="@color/grey"
             android:background="@drawable/rectangle"
             android:layout_width="wrap_content"
@@ -65,6 +65,7 @@
             app:layout_constraintTop_toTopOf="parent"
             app:searchIcon="@null"
             app:iconifiedByDefault="false"
+            android:focusable="true"
             />
 
     <androidx.appcompat.widget.AppCompatButton
