List menu layout, film page layout, flow checks

--- a/app/src/main/res/drawable/round.xml
+++ b/app/src/main/res/drawable/round.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
         android:innerRadiusRatio="2"
         android:shape="ring"
@@ -7,6 +7,5 @@
     <gradient
             android:type="radial"
             android:gradientRadius="8dp"
-            android:endColor="@color/red_400"
-            android:centerColor="@color/red_700" />
+            android:endColor="@color/red_200"/>
 </shape>
