--- a/app/src/main/res/layout/list_menu_film.xml
+++ b/app/src/main/res/layout/list_menu_film.xml
@@ -56,12 +56,12 @@
             android:textColor="@color/another_white" />
 
     <ImageButton
-        android:id="@+id/lmMenu"
+            android:id="@+id/lmMenu"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-        android:src="@drawable/ic_menu_dots"
-        android:background="transparent"
-        app:layout_constraintTop_toTopOf="@id/lmFilmPoster"
-        app:layout_constraintEnd_toEndOf="parent"/>
+            android:src="@drawable/ic_menu_dots"
+            android:background="@android:color/transparent"
+            app:layout_constraintTop_toTopOf="@id/lmFilmPoster"
+            app:layout_constraintEnd_toEndOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
