--- a/app/src/main/res/layout/lists_menu.xml
+++ b/app/src/main/res/layout/lists_menu.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        xmlns:tools="http://schemas.android.com/tools"
         android:background="@color/red_200">
 
     <ImageButton
@@ -11,7 +11,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_arrow_back"
-            android:background="transparent"
+            android:background="@android:color/transparent"
             android:layout_margin="16dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
@@ -21,7 +21,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_add_without_circle"
-            android:background="transparent"
+            android:background="@android:color/transparent"
             android:layout_marginTop="16dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toStartOf="@id/higherDots" />
@@ -31,45 +31,43 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_menu_dots_40dp"
-            android:background="transparent"
+            android:background="@android:color/transparent"
             android:layout_marginEnd="4dp"
             app:layout_constraintTop_toTopOf="@id/addBtn"
             app:layout_constraintBottom_toBottomOf="@id/addBtn"
             app:layout_constraintEnd_toEndOf="parent" />
 
     <TextView
-        android:id="@+id/listTitle"
+            android:id="@+id/listTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-        tools:text="Фильмы про побег"
-        app:layout_constraintTop_toBottomOf="@id/addBtn"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:fontFamily="@font/rubik_bold"
-        android:textSize="24sp"
-        android:textColor="@color/another_white"
-        android:layout_margin="16dp"/>
+            tools:text="Фильмы про побег"
+            app:layout_constraintTop_toBottomOf="@id/addBtn"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:fontFamily="@font/rubik_bold"
+            android:textSize="24sp"
+            android:textColor="@color/another_white"
+            android:layout_margin="16dp" />
 
     <ImageView
-        android:id="@+id/listIcon"
+            android:id="@+id/listIcon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/pobeg"
-        app:layout_constraintTop_toBottomOf="@id/listTitle"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:foreground="@drawable/round"/>
+            app:layout_constraintTop_toBottomOf="@id/listTitle"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:foreground="@drawable/round" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/filmListRecyclerView"
+            android:id="@+id/filmListRecyclerView"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/listIcon"
-        app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/listIcon"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            tools:listitem="@layout/list_menu_film"/>
-
-    
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            tools:listitem="@layout/list_menu_film" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
