--- a/app/src/main/res/drawable/rounded_fg.xml
+++ b/app/src/main/res/drawable/rounded_fg.xml
@@ -7,6 +7,5 @@
     <gradient
             android:type="radial"
             android:gradientRadius="8dp"
-            android:endColor="@color/red_400"
-            android:centerColor="@color/red_700" />
+            android:endColor="@color/red_400" />
 </shape>
