--- a/app/src/main/res/layout/fragment_lists.xml
+++ b/app/src/main/res/layout/fragment_lists.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".ui.lists.ListsFragment"
         android:background="#ED959E"
-        android:backgroundTint="@color/red_200">
+        android:backgroundTint="@color/red_200"
+        android:animateLayoutChanges="true">
 
     <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerview_lists"
