--- a/app/src/main/res/layout/change_profile.xml
+++ b/app/src/main/res/layout/change_profile.xml
@@ -26,7 +26,7 @@
             android:textAllCaps="false"
             android:textSize="14sp"
             android:textAlignment="center"
-            android:text="@string/title_change_photo"
+            android:text="@string/change_photo_string"
             android:background="@drawable/subscribe"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -38,7 +38,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAlignment="center"
-            android:text="@string/title_change_name"
+            android:text="@string/change_name_string"
             android:textColor="@color/white_full"
             android:textStyle="bold"
             android:textSize="16sp"
@@ -67,7 +67,7 @@
             android:textAllCaps="false"
             android:textSize="14sp"
             android:textAlignment="center"
-            android:text="@string/title_save"
+            android:text="@string/save_string"
             android:background="@drawable/save"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
