--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -12,7 +12,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:padding="8dp"
-                android:text="@string/title_profile_name"
+                android:text="@string/profile_name_string"
                 android:textColor="@color/white_full"
                 android:textStyle="bold"
                 android:textSize="22sp"
@@ -28,7 +28,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAlignment="center"
-                android:text="@string/title_playlists"
+                android:text="@string/playlists_string"
                 android:textColor="@color/white_full"
                 android:textStyle="bold"
                 android:textSize="12sp"
@@ -42,7 +42,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAlignment="center"
-                android:text="@string/title_subscribers"
+                android:text="@string/subscribers_string"
                 android:textColor="@color/white_full"
                 android:textStyle="bold"
                 android:textSize="12sp"
@@ -56,7 +56,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAlignment="center"
-                android:text="@string/title_subscriptions"
+                android:text="@string/subscriptions_string"
                 android:textColor="@color/white_full"
                 android:textStyle="bold"
                 android:textSize="12sp"
@@ -105,7 +105,7 @@
                 android:textAllCaps="false"
                 android:textSize="14sp"
                 android:textAlignment="center"
-                android:text="@string/title_change_profile"
+                android:text="@string/change_profile_string"
                 android:background="@drawable/subscribe"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
@@ -121,7 +121,7 @@
                 android:textAllCaps="false"
                 android:textSize="14sp"
                 android:textAlignment="center"
-                android:text="@string/title_show_all"
+                android:text="@string/show_all_string"
                 android:background="@drawable/subscribe"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
