--- a/app/src/main/res/layout/film_page.xml
+++ b/app/src/main/res/layout/film_page.xml
@@ -6,6 +6,18 @@
         android:layout_height="match_parent"
         android:background="@color/red_400">
 
+    <ProgressBar
+            android:id="@+id/progress_bar"
+            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="5dp"
+            android:scaleY="4"
+            android:indeterminateTint="@color/red_500"
+            android:indeterminateBehavior="repeat"
+            android:indeterminate="true"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
     <ImageButton
             android:id="@+id/backBtn"
             android:layout_width="wrap_content"
