--- a/app/src/main/res/layout/film_page.xml
+++ b/app/src/main/res/layout/film_page.xml
@@ -48,12 +48,11 @@
 
     <ImageView
             android:id="@+id/filmSearchPoster"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="130dp"
+            android:layout_height="175dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/backBtn"
             android:layout_margin="16dp"
-            android:src="@drawable/pobeg"
             android:background="@drawable/border" />
 
     <TextView
@@ -68,7 +67,7 @@
             tools:text="1994, США"
             android:fontFamily="@font/rubik_bold"
             android:textSize="14sp"
-            android:textColor="@color/another_white"
+            android:textColor="@color/grey_for_search_result"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
             android:maxLines="1"
@@ -86,7 +85,7 @@
             tools:text="Драма"
             android:fontFamily="@font/rubik_bold"
             android:textSize="14sp"
-            android:textColor="@color/another_white"
+            android:textColor="@color/grey_for_search_result"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
             android:maxLines="1"
@@ -119,7 +118,7 @@
             tools:text="Фрэнк Дарабонт"
             android:fontFamily="@font/rubik_bold"
             android:textSize="14sp"
-            android:textColor="@color/another_white"
+            android:textColor="@color/grey_for_search_result"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
             android:maxLines="1"
@@ -152,7 +151,7 @@
             tools:text="Тим Роббинс \n Морган Фриман \n Боб Гантон"
             android:fontFamily="@font/rubik_bold"
             android:textSize="14sp"
-            android:textColor="@color/another_white"
+            android:textColor="@color/grey_for_search_result"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
             android:maxLines="4"
@@ -191,7 +190,7 @@
             tools:text="9.1"
             android:fontFamily="@font/rubik_bold"
             android:textSize="14sp"
-            android:textColor="@color/another_white"
+            android:textColor="@color/grey_for_search_result"
             android:layout_marginStart="4dp"
             app:layout_constraintStart_toEndOf="@id/kinopoisk"
             app:layout_constraintTop_toTopOf="@id/kinopoisk"
@@ -204,7 +203,7 @@
             tools:text="9.3"
             android:fontFamily="@font/rubik_bold"
             android:textSize="14sp"
-            android:textColor="@color/another_white"
+            android:textColor="@color/grey_for_search_result"
             app:layout_constraintStart_toEndOf="@id/imdb"
             app:layout_constraintTop_toTopOf="@id/imdb"
             android:layout_marginStart="4dp" />
@@ -216,6 +215,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@id/imdb"
             android:layout_marginTop="16dp"
+            android:layout_marginBottom="16dp"
             android:padding="16dp"
             android:background="@drawable/border"
             app:layout_constraintVertical_bias="0.1">
