--- a/app/src/main/res/layout/loading_screens.xml
+++ b/app/src/main/res/layout/loading_screens.xml
@@ -50,10 +50,7 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-            xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:app="http://schemas.android.com/apk/res-auto"
-            xmlns:tools="http://schemas.android.com/tools"
+    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/red_400">
@@ -84,8 +81,6 @@
                 android:textSize="24sp"
                 android:textAlignment="center" />
 
-
-
         <com.google.android.gms.common.SignInButton
                 android:id="@+id/sign_in_button"
                 android:layout_width="wrap_content"
@@ -93,7 +88,7 @@
                 app:layout_constraintTop_toBottomOf="@id/shareTxt"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"/>
+                app:layout_constraintBottom_toBottomOf="parent" />
 
         <ImageButton
                 android:id="@+id/right_dot"
