--- a/app/src/main/res/layout/fragment_lists.xml
+++ b/app/src/main/res/layout/fragment_lists.xml
@@ -13,7 +13,8 @@
     <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerview_lists"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:layout_marginBottom="55dp" />
 
     <TextView
             android:id="@+id/text_lists"
