--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -50,7 +50,8 @@
             app:layout_constraintTop_toBottomOf="@id/find_button"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginBottom="55dp"/>
 
     <androidx.appcompat.widget.SearchView
             android:id="@+id/textView_search"
