Search fragment changed 4.0

--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -21,16 +21,13 @@
             android:fontFamily="@font/rubik_bold"
             android:textSize="20sp"
             android:textColor="@color/white_full"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.8" />
+            app:layout_constraintTop_toBottomOf="@id/imageView1"/>
 
     <ImageView
             android:id="@+id/imageView1"
             android:layout_marginStart="5dp"
-            android:layout_marginTop="10dp"
             android:layout_gravity="center_vertical|end"
             android:gravity="center_vertical|end"
             android:layout_width="wrap_content"
